Stream task12 valueof [1 of 10]