@@ -53,7 +53,7 @@ public class Main5 {
                 .collect(Collectors.collectingAndThen(Collectors.toList(),
                         list -> {if (list.size() !=1) {
                     throw new IllegalStateException("except one z");}
-        return list.get(0);
+        return list.getFirst();
         }));
     }
 
